# hh_api

./: .env  .env.example  .gitignore  README.md  config.py  hh_api.py  main.py  pyproject.toml  requirements.txt  vacancies.db
api/: config.py  hh_api.py  models.py
database/: db_creator.py  db_manager.py  models.py
tests/: test_db.py
utils/: db_manager.py  helpers.py  logger.py
