[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = "Мой Python проект"
authors = ["Ваше Имя <2778722@mail.ru>"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
mypy = "^1.18.2"
black = "^25.1.0"
isort = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line-length = 119
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | dist
)/
'''

[tool.isort]
line_length = 119
known_third_party = ["requests"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

